[package]
name = "version-checker"
version = "0.1.1"
authors = ["altrius <tom.b.2k2@gmail.com>"]
edition = "2018"
description = "A platform agnostic Crates.io version checker, still early stages so dont refrain from suggesting things"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.8.1"
crates_io_api = "0.6.1"
semver = "0.11.0"
regex = "1.4.3"
serde = "1.0.119"
serde_derive = "1.0.119"
reqwest = { version = "0.11", features = ["blocking", "json"] }
toml = "0.5.8"
zip = "0.5.9"
clap = "2.33.3"